@@ -32,6 +32,7 @@ Bugs fixed
 - Bug 2992 - lte: Send method of the LteUeNetDevice doesn't use protocolNumber parameter
 - Bug 2997 - lte: EpcTft::PacketFilter::Matches does not use ipv6 address to match an IP packet
 - Bug 2860 - mobility: Set Z coordinate for position-allocation classes
+- Bug 2893 - lte: GetPgw in helper should be const
 - Bug 3027 - lte: S1 signalling is done before RRC connection establishment is finished
 
 Known issues
